[Mac] Call base::i18n::InitializeICU in infoplist_strings_tool.

BUG=616830
R=mark@chromium.org

Review URL: https://codereview.chromium.org/2078343003 .

Cr-Commit-Position: refs/heads/master@{#400779}

Former-commit-id: 284f4b2c6eedeed928463691221ef23a89168f2b